# MultiroomSceneTrajectoryGeneration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_REQUIREMENTS.md  USAGE.md
docs/schema/: scene.schema.v1.json
examples/structural/: 2t7WUuJeko7.json  demo_apartment.json  matterport_2t7WUuJeko7.json  structural_template.json
samples/2t7WUuJeko7/: 2t7WUuJeko7_connectivity.geojson  2t7WUuJeko7_floor_0_trajectory.json  2t7WUuJeko7_trajectory_generation_summary.json
samples/demo_apartment/: demo_apartment_floor_0_trajectory.json  demo_apartment_trajectory_generation_summary.json
samples/matterport_2t7WUuJeko7/: matterport_2t7WUuJeko7_connectivity.geojson  matterport_2t7WUuJeko7_floor_0_trajectory.json  matterport_2t7WUuJeko7_trajectory_generation_summary.json
samples/structural_template/: structural_template_connectivity.geojson  structural_template_floor_0_trajectory.json  (+1 more)
scripts/: benchmark_structural_json.py  convert_connectivity_geojson_to_structural_json.py  convert_structural_primitives_to_scene_json.py  dev_setup.sh  minimal_generate_and_visualize.py  preprocess_hl3d_matterport_to_structural_json.py  regenerate_samples.py  render_trajectory.py  run_hl3d_matterport_trajectory.py
tests/: test_adapter_helpers.py  test_api.py  test_camera.py  test_cli.py  test_cli_e2e.py  test_config.py  test_hl3d_matterport_adapter.py  test_json_schema_contract.py  test_packaging_smoke.py  test_pipeline.py  test_preprocess.py  test_regenerate_samples.py  test_reproducibility.py  test_room_graph.py  test_scene_geojson.py  test_schema.py  test_spline.py  test_structural_json_adapter.py  test_structural_primitives_converter.py  test_traversal.py  test_validation.py  test_visualization.py  test_walkthrough_local.py
(+39 files in other folders)
